--- a/pbf/build.gradle
+++ b/pbf/build.gradle
@@ -18,4 +18,13 @@ subprojects {
         }
         mavenCentral()
     }
+
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    artifacts {
+        archives sourcesJar
+    }
 }
