--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'de.topobyte:osm4j-core:0.0.1'
 
     compile 'com.google.protobuf:protobuf-java:2.5.0'
+    compile 'net.jpountz.lz4:lz4:1.3.0'
 
     compile 'org.slf4j:slf4j-api:1.6.1'
     runtime 'org.slf4j:slf4j-log4j12:1.6.1'
