--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -19,6 +19,7 @@ sourceSets {
 
 dependencies {
     compile 'de.topobyte:osm4j-core:0.0.1'
+    compile 'de.topobyte:commons-cli-helper:0.0.1'
 
     compile 'com.google.protobuf:protobuf-java:2.5.0'
     compile 'net.jpountz.lz4:lz4:1.3.0'
