--- a/tbo/core/build.gradle
+++ b/tbo/core/build.gradle
@@ -6,6 +6,7 @@ if (project.hasProperty("topobyte")) {
 dependencies {
     compile 'de.topobyte:osm4j-core:0.0.2'
 
+    compile 'net.jpountz.lz4:lz4:1.3.0'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.slf4j:slf4j-api:1.6.1'
     runtime 'org.slf4j:slf4j-log4j12:1.6.1'
