--- a/tbo/core/build.gradle
+++ b/tbo/core/build.gradle
@@ -4,7 +4,7 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile 'de.topobyte:osm4j-core:0.0.3'
+    compile 'de.topobyte:osm4j-core:0.0.20'
     compile 'de.topobyte:compact-io:0.0.5'
 
     compile 'net.jpountz.lz4:lz4:1.3.0'
@@ -13,7 +13,9 @@ dependencies {
     runtime 'org.slf4j:slf4j-log4j12:1.6.1'
     runtime 'log4j:log4j:1.2.16'
 
-    testCompile 'de.topobyte:osm4j-testing:0.0.1'
+    testCompile 'de.topobyte:osm4j-pbf:0.0.8'
+    testCompile 'de.topobyte:osm4j-xml:0.0.5'
+    testCompile 'de.topobyte:osm4j-testing:0.0.5'
     testCompile 'junit:junit:4.11'
 }
 
