--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -12,7 +12,7 @@ sourceSets {
 }
 
 dependencies {
-    compile 'de.topobyte:osm4j-core:0.0.19'
+    compile 'de.topobyte:osm4j-core:0.0.20'
     compile 'de.topobyte:commons-cli-helper:0.0.1'
 
     compile 'com.google.protobuf:protobuf-java:2.6.1'
@@ -21,6 +21,8 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.6.1'
     runtime 'org.slf4j:slf4j-log4j12:1.6.1'
     runtime 'log4j:log4j:1.2.16'
+
+    testCompile 'de.topobyte:osm4j-xml:0.0.5'
 }
 
 task copyJars(type: Copy) {
