--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     runtime 'org.slf4j:slf4j-log4j12:1.6.1'
     runtime 'log4j:log4j:1.2.16'
 
+    testCompile 'junit:junit:4.12'
     testCompile 'de.topobyte:osm4j-xml:0.0.5'
 }
 
