--- a/pbf/testing/build.gradle
+++ b/pbf/testing/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     compile project(':osm4j-pbf')
+
+    compile 'de.topobyte:commons-cli-helper:0.0.1'
 }
 
 task copyJars(type: Copy) {
