--- a/pbf/testing/build.gradle
+++ b/pbf/testing/build.gradle
@@ -2,6 +2,9 @@ dependencies {
     compile project(':osm4j-pbf')
 
     compile 'de.topobyte:commons-cli-helper:0.0.5'
+
+    runtime 'org.slf4j:slf4j-log4j12:1.6.1'
+    runtime 'log4j:log4j:1.2.16'
 }
 
 task copyJars(type: Copy) {
