--- a/tbo/core/build.gradle
+++ b/tbo/core/build.gradle
@@ -10,13 +10,14 @@ dependencies {
     compile 'net.jpountz.lz4:lz4:1.3.0'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.slf4j:slf4j-api:1.6.1'
-    runtime 'org.slf4j:slf4j-log4j12:1.6.1'
-    runtime 'log4j:log4j:1.2.16'
 
     testCompile 'de.topobyte:osm4j-pbf:0.0.11'
     testCompile 'de.topobyte:osm4j-xml:0.0.6'
     testCompile 'de.topobyte:osm4j-testing:0.0.6'
     testCompile 'junit:junit:4.11'
+
+    testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
+    testRuntime 'log4j:log4j:1.2.16'
 }
 
 task copyJars(type: Copy) {
