--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -12,7 +12,9 @@ sourceSets {
 }
 
 dependencies {
-    compile 'de.topobyte:osm4j-core:0.0.21'
+    compile 'de.topobyte:osm4j-core:0.1.0'
+
+    compile 'com.slimjars.trove4j:trove4j-object-int-hash-map:1.0.1'
 
     compile 'com.google.protobuf:protobuf-java:2.6.1'
     compile 'net.jpountz.lz4:lz4:1.3.0'
@@ -20,5 +22,5 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.6.1'
 
     testCompile 'junit:junit:4.12'
-    testCompile 'de.topobyte:osm4j-xml:0.0.6'
+    testCompile 'de.topobyte:osm4j-xml:0.1.0'
 }
