--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'de.topobyte:osm4j-xml:0.1.0'
+    testCompile 'de.topobyte:osm4j-testing:0.1.0'
 
     testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
     testRuntime 'log4j:log4j:1.2.16'
