--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -6,7 +6,7 @@ if (project.hasProperty("topobyte")) {
 sourceSets {
     main {
         java {
-            srcDir 'src/gen/java'
+            srcDir 'src/gen-lite/java'
         }
     }
 }
