--- a/pbf/lite/build.gradle
+++ b/pbf/lite/build.gradle
@@ -6,7 +6,16 @@ if (project.hasProperty("topobyte")) {
 sourceSets {
     main {
         java {
-            srcDir 'src/gen/java'
+            srcDir '../core/src/gen-lite/java'
+            srcDir '../core/src/main/java'
+        }
+    }
+    test {
+        java {
+            srcDir '../core/src/test/java'
+        }
+        resources {
+            srcDir '../core/src/test/resources'
         }
     }
 }
@@ -16,7 +25,7 @@ dependencies {
 
     compile 'com.slimjars.trove4j:trove4j-object-int-hash-map:1.0.1'
 
-    compile 'com.google.protobuf:protobuf-java:3.9.1'
+    compile 'com.google.protobuf:protobuf-javalite:3.9.1'
 
     compile 'net.jpountz.lz4:lz4:1.3.0'
 
