--- a/pbf/lite/build.gradle
+++ b/pbf/lite/build.gradle
@@ -6,7 +6,7 @@ if (project.hasProperty("topobyte")) {
 sourceSets {
     main {
         java {
-            srcDir '../core/src/gen-lite/java'
+            srcDir 'src/gen/java'
             srcDir '../core/src/main/java'
         }
     }
