Change runtime dependencies for modules
Instead of having the modules 'core' and 'lite' which depend on the full
runtime and the lite runtime respectively, have modules 'core' and
'full'. The 'core' module depends on the lite runtime and the 'full'
module depends on the full runtime. That way the default behavior is to
depend on the lite runtime and users of the library can actively opt for
the full runtime if they need or want to.

--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
     compile 'com.slimjars.trove4j:trove4j-object-int-hash-map:1.0.1'
 
-    compile 'com.google.protobuf:protobuf-java:3.9.1'
+    compile 'com.google.protobuf:protobuf-javalite:3.9.1'
 
     compile 'net.jpountz.lz4:lz4:1.3.0'
 
