--- a/geometry/core/build.gradle
+++ b/geometry/core/build.gradle
@@ -4,7 +4,8 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile 'de.topobyte:osm4j-core:0.1.0'
+    compile project(':osm4j-core')
+
     compile 'de.topobyte:jts-utils:0.2.0'
     compile 'de.topobyte:jts-medical-kit:0.2.0'
 
