--- a/geometry/testing/build.gradle
+++ b/geometry/testing/build.gradle
@@ -1,8 +1,7 @@
 dependencies {
     compile project(':osm4j-geometry')
-
-    compile 'de.topobyte:osm4j-xml:0.1.3'
-    compile 'de.topobyte:osm4j-tbo:0.1.0'
+    compile project(':osm4j-xml')
+    compile project(':osm4j-tbo')
 
     runtime 'org.slf4j:slf4j-log4j12:1.6.1'
     runtime 'log4j:log4j:1.2.16'
