--- a/incubating/build.gradle
+++ b/incubating/build.gradle
@@ -1,9 +1,7 @@
 dependencies {
-    compile 'de.topobyte:osm4j-core:0.1.0'
-    compile 'de.topobyte:osm4j-geometry:0.1.0'
-    compile 'de.topobyte:osm4j-tbo:0.1.0'
-    compile 'de.topobyte:osm4j-utils:0.1.0'
-    compile 'de.topobyte:osm4j-extra:0.1.0'
+    compile project(':osm4j-utils')
+    compile project(':osm4j-extra')
+
     compile 'de.topobyte:melon-io:0.0.1'
 
     compile 'org.slf4j:slf4j-api:1.6.1'
