--- a/pbf/full/build.gradle
+++ b/pbf/full/build.gradle
@@ -21,7 +21,7 @@ sourceSets {
 }
 
 dependencies {
-    compile 'de.topobyte:osm4j-core:0.1.0'
+    compile project(':osm4j-core')
 
     compile 'com.slimjars.trove4j:trove4j-object-int-hash-map:1.0.1'
 
@@ -31,9 +31,10 @@ dependencies {
 
     compile 'org.slf4j:slf4j-api:1.6.1'
 
+    testCompile project(':osm4j-xml')
+    testCompile project(':osm4j-testing')
+
     testCompile 'junit:junit:4.12'
-    testCompile 'de.topobyte:osm4j-xml:0.1.2'
-    testCompile 'de.topobyte:osm4j-testing:0.1.0'
 
     testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
     testRuntime 'log4j:log4j:1.2.16'
