--- a/tbo/core/build.gradle
+++ b/tbo/core/build.gradle
@@ -4,7 +4,8 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile 'de.topobyte:osm4j-core:0.1.0'
+    compile project(':osm4j-core')
+
     compile 'de.topobyte:compact-io:0.0.5'
 
     compile 'com.slimjars.trove4j:trove4j-hash-map:1.0.1'
@@ -14,9 +15,10 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.slf4j:slf4j-api:1.6.1'
 
-    testCompile 'de.topobyte:osm4j-pbf:0.1.0'
-    testCompile 'de.topobyte:osm4j-xml:0.1.0'
-    testCompile 'de.topobyte:osm4j-testing:0.1.0'
+    testCompile project(':osm4j-xml')
+    testCompile project(':osm4j-pbf')
+    testCompile project(':osm4j-testing')
+
     testCompile 'junit:junit:4.11'
 
     testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
