--- a/utils/core/build.gradle
+++ b/utils/core/build.gradle
@@ -4,11 +4,12 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile 'de.topobyte:osm4j-core:0.1.0'
-    compile 'de.topobyte:osm4j-xml:0.1.3'
-    compile 'de.topobyte:osm4j-pbf:0.2.0'
-    compile 'de.topobyte:osm4j-tbo:0.1.0'
-    compile 'de.topobyte:osm4j-geometry:0.2.0'
+    compile project(':osm4j-core')
+    compile project(':osm4j-xml')
+    compile project(':osm4j-pbf')
+    compile project(':osm4j-tbo')
+    compile project(':osm4j-geometry')
+
     compile 'de.topobyte:large-scale-file-io:0.1.0'
     compile 'de.topobyte:adt-geo:0.1.0'
     compile 'de.topobyte:commons-cli-helper:0.1.0'
@@ -21,7 +22,8 @@ dependencies {
 
     compile 'org.slf4j:slf4j-api:1.6.1'
 
-    testCompile 'de.topobyte:osm4j-testing:0.1.0'
+    testCompile project(':osm4j-testing')
+
     testCompile 'junit:junit:4.12'
 
     testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
