--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ allprojects {
     version = '1.0.0'
 }
 
+configure(project(':osm4j-extra')) {
+    version = '1.0.1'
+}
+
 subprojects {
     task allDeps(type: DependencyReportTask) {}
 
