--- a/incubating/build.gradle
+++ b/incubating/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     runtime 'org.slf4j:slf4j-log4j12:1.6.1'
     runtime 'log4j:log4j:1.2.16'
 
+    testCompile 'de.topobyte:collections-utils:0.0.5'
     testCompile 'junit:junit:4.12'
 }
 
