--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,16 @@ allprojects {
     version = '1.1.0'
 }
 
-configure(project(':osm4j-incubating')) {
+configure(project(':osm4j-core')) {
     version = '1.1.1'
+}
+
+configure(project(':osm4j-testing')) {
+    version = '1.1.1'
+}
+
+configure(project(':osm4j-incubating')) {
+    version = '1.1.2'
 }
 
 subprojects {
