--- a/incubating/build.gradle
+++ b/incubating/build.gradle
@@ -7,7 +7,8 @@ dependencies {
     compile project(':osm4j-utils')
     compile project(':osm4j-extra')
 
-    compile 'de.topobyte:melon-io:0.0.1'
+    compile 'de.topobyte:melon-io:0.1.0'
+    compile 'de.topobyte:melon-paths:0.0.3'
 
     compile 'org.slf4j:slf4j-api:1.6.1'
 
