--- a/incubating/build.gradle
+++ b/incubating/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 
     compile 'de.topobyte:melon-io:0.1.0'
     compile 'de.topobyte:melon-paths:0.0.3'
+    compile 'de.topobyte:simple-mapfile-xml:0.1.0'
 
     compile 'org.slf4j:slf4j-api:1.6.1'
 
