Implement finding of changesets replication by timestamp

--- a/replication/core/src/test/resources/log4j.properties
+++ b/replication/core/src/test/resources/log4j.properties
@@ -2,6 +2,8 @@ log4j.rootLogger=WARN, A1
 
 log4j.logger.de.topobyte.osm4j=INFO
 log4j.logger.de.topobyte.osm4j.osc=DEBUG
+log4j.logger.de.topobyte.osm4j.changeset=DEBUG
+log4j.logger.de.topobyte.osm4j.replication=DEBUG
 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
