--- a/replication/core/build.gradle
+++ b/replication/core/build.gradle
@@ -1,3 +1,8 @@
+if (project.hasProperty("topobyte")) {
+    apply from: 'file:///' + System.getProperty("user.home") \
+        + '/.gradle/topobyte.gradle'
+}
+
 dependencies {
     compile project(':osm4j-core')
 
