--- a/edit/core/build.gradle
+++ b/edit/core/build.gradle
@@ -1,12 +1,12 @@
 dependencies {
-    compile project(':osm4j-core')
+    api project(':osm4j-core')
 
-    compile 'de.topobyte:xml4jah-dom:0.0.6'
-    compile 'org.apache.httpcomponents:httpclient:4.5.5'
-    compile 'org.slf4j:slf4j-api:1.6.1'
+    api 'de.topobyte:xml4jah-dom:0.0.6'
+    api 'org.apache.httpcomponents:httpclient:4.5.5'
+    api 'org.slf4j:slf4j-api:1.6.1'
 
-    testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntime 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
+    testRuntimeOnly 'log4j:log4j:1.2.16'
 }
 
 eclipse.project.name = 'osm4j-edit'
