--- a/geometry/core/build.gradle
+++ b/geometry/core/build.gradle
@@ -4,14 +4,14 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile project(':osm4j-core')
+    api project(':osm4j-core')
 
-    compile 'de.topobyte:jts-utils:0.2.3'
-    compile 'de.topobyte:jts-medical-kit:0.2.1'
+    api 'de.topobyte:jts-utils:0.2.3'
+    api 'de.topobyte:jts-medical-kit:0.2.1'
 
-    compile 'com.slimjars.trove4j:trove4j-long-array-stack:1.0.1'
+    api 'com.slimjars.trove4j:trove4j-long-array-stack:1.0.1'
 
-    compile 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.6.1'
 }
 
 eclipse.project.name = 'osm4j-geometry'
