--- a/incubating/build.gradle
+++ b/incubating/build.gradle
@@ -4,18 +4,18 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile project(':osm4j-utils')
+    api project(':osm4j-utils')
 
-    compile 'de.topobyte:melon-io:0.1.0'
-    compile 'de.topobyte:melon-paths:0.0.3'
-    compile 'de.topobyte:simple-mapfile-xml:0.1.0'
+    api 'de.topobyte:melon-io:0.1.0'
+    api 'de.topobyte:melon-paths:0.0.3'
+    api 'de.topobyte:simple-mapfile-xml:0.1.0'
 
-    compile 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.6.1'
 
-    testCompile 'de.topobyte:collections-utils:0.0.5'
-    testCompile 'junit:junit:4.13.2'
-    testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntime 'log4j:log4j:1.2.16'
+    testImplementation 'de.topobyte:collections-utils:0.0.5'
+    testImplementation 'junit:junit:4.13.2'
+    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
+    testRuntimeOnly 'log4j:log4j:1.2.16'
 }
 
 task copyJars(type: Copy) {
@@ -25,7 +25,7 @@ task copyJars(type: Copy) {
 
 task copyDeps(type: Copy) {
     into "$buildDir/lib-run"
-    from configurations.runtime
+    from configurations.runtimeClasspath
 }
 
 task createRuntime(dependsOn: [copyJars, copyDeps]) {
