--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -12,21 +12,21 @@ sourceSets {
 }
 
 dependencies {
-    compile project(':osm4j-core')
+    api project(':osm4j-core')
 
-    compile 'com.slimjars.trove4j:trove4j-object-int-hash-map:1.0.1'
+    api 'com.slimjars.trove4j:trove4j-object-int-hash-map:1.0.1'
 
-    compile 'com.google.protobuf:protobuf-javalite:3.9.1'
+    api 'com.google.protobuf:protobuf-javalite:3.9.1'
 
-    compile 'net.jpountz.lz4:lz4:1.3.0'
+    api 'net.jpountz.lz4:lz4:1.3.0'
 
-    compile 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.6.1'
 
-    testCompile project(':osm4j-xml')
-    testCompile project(':osm4j-testing')
+    testImplementation project(':osm4j-xml')
+    testImplementation project(':osm4j-testing')
 
-    testCompile 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.13.2'
 
-    testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntime 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
+    testRuntimeOnly 'log4j:log4j:1.2.16'
 }
