--- a/pbf/testing/build.gradle
+++ b/pbf/testing/build.gradle
@@ -1,10 +1,10 @@
 dependencies {
-    compile project(':osm4j-pbf')
+    implementation project(':osm4j-pbf')
 
-    compile 'de.topobyte:commons-cli-helper:0.1.0'
+    implementation 'de.topobyte:commons-cli-helper:0.1.0'
 
-    runtime 'org.slf4j:slf4j-log4j12:1.6.1'
-    runtime 'log4j:log4j:1.2.16'
+    runtimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
+    runtimeOnly 'log4j:log4j:1.2.16'
 }
 
 task copyJars(type: Copy) {
@@ -14,7 +14,7 @@ task copyJars(type: Copy) {
 
 task copyDeps(type: Copy) {
     into "$buildDir/lib-run"
-    from configurations.runtime
+    from configurations.runtimeClasspath
 }
 
 task createRuntime(dependsOn: [copyJars, copyDeps]) {
