--- a/replication/core/build.gradle
+++ b/replication/core/build.gradle
@@ -4,24 +4,24 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile project(':osm4j-core')
+    api project(':osm4j-core')
 
-    compile 'de.topobyte:dynsax:0.0.1'
+    api 'de.topobyte:dynsax:0.0.1'
 
-    compile 'org.apache.commons:commons-text:1.1'
-    compile 'commons-io:commons-io:2.4'
-    compile 'joda-time:joda-time:2.9.7'
-    compile 'org.apache.httpcomponents:httpclient:4.5.5'
-    compile 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.apache.commons:commons-text:1.1'
+    api 'commons-io:commons-io:2.4'
+    api 'joda-time:joda-time:2.9.7'
+    api 'org.apache.httpcomponents:httpclient:4.5.5'
+    api 'org.slf4j:slf4j-api:1.6.1'
 
-    testCompile project(':osm4j-testing')
+    testImplementation project(':osm4j-testing')
 
-    testCompile 'org.apache.commons:commons-compress:1.8'
-    testCompile 'de.topobyte:adt-geo:0.1.0'
-    testCompile 'junit:junit:4.13.2'
+    testImplementation 'org.apache.commons:commons-compress:1.8'
+    testImplementation 'de.topobyte:adt-geo:0.1.0'
+    testImplementation 'junit:junit:4.13.2'
 
-    testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntime 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
+    testRuntimeOnly 'log4j:log4j:1.2.16'
 }
 
 eclipse.project.name = 'osm4j-replication'
