--- a/tbo/core/build.gradle
+++ b/tbo/core/build.gradle
@@ -4,23 +4,23 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile project(':osm4j-core')
+    api project(':osm4j-core')
 
-    compile 'de.topobyte:compact-io:0.0.5'
+    api 'de.topobyte:compact-io:0.0.5'
 
-    compile 'com.slimjars.trove4j:trove4j-hash-map:1.0.1'
-    compile 'com.slimjars.trove4j:trove4j-int-object-hash-map:1.0.1'
+    api 'com.slimjars.trove4j:trove4j-hash-map:1.0.1'
+    api 'com.slimjars.trove4j:trove4j-int-object-hash-map:1.0.1'
 
-    compile 'net.jpountz.lz4:lz4:1.3.0'
-    compile 'org.apache.commons:commons-lang3:3.3.2'
-    compile 'org.slf4j:slf4j-api:1.6.1'
+    api 'net.jpountz.lz4:lz4:1.3.0'
+    api 'org.apache.commons:commons-lang3:3.3.2'
+    api 'org.slf4j:slf4j-api:1.6.1'
 
-    testCompile project(':osm4j-xml')
-    testCompile project(':osm4j-pbf')
-    testCompile project(':osm4j-testing')
+    testImplementation project(':osm4j-xml')
+    testImplementation project(':osm4j-pbf')
+    testImplementation project(':osm4j-testing')
 
-    testCompile 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.13.2'
 
-    testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntime 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
+    testRuntimeOnly 'log4j:log4j:1.2.16'
 }
