--- a/utils/cli/build.gradle
+++ b/utils/cli/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     repositories {
-        maven { url 'http://mvn.topobyte.de' }
+        maven { url 'https://mvn.topobyte.de' }
     }
     dependencies {
-        classpath 'de.topobyte:gradle-launch-and-install-plugin:0.0.3'
+        classpath 'de.topobyte:gradle-launch-and-install-plugin:0.0.5'
     }
 }
 
@@ -46,18 +46,18 @@ launchAndInstall {
 
 distributions {
     main {
-        baseName = 'osm4j-utils'
+        distributionBaseName = 'osm4j-utils'
     }
 }
 
 dependencies {
-    compile project(':osm4j-utils')
-    compile project(':osm4j-incubating')
+    implementation project(':osm4j-utils')
+    implementation project(':osm4j-incubating')
 
-    compile 'de.topobyte:simple-mapfile-xml:0.1.0'
+    implementation 'de.topobyte:simple-mapfile-xml:0.1.0'
 
-    runtime 'org.slf4j:slf4j-log4j12:1.6.1'
-    runtime 'log4j:log4j:1.2.16'
+    runtimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
+    runtimeOnly 'log4j:log4j:1.2.16'
 }
 
 task copyJars(type: Copy) {
@@ -67,7 +67,7 @@ task copyJars(type: Copy) {
 
 task copyDeps(type: Copy) {
     into "$buildDir/lib-run"
-    from configurations.runtime
+    from configurations.runtimeClasspath
 }
 
 task createRuntime(dependsOn: [copyJars, copyDeps]) {
