--- a/utils/core/build.gradle
+++ b/utils/core/build.gradle
@@ -4,30 +4,30 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
-    compile project(':osm4j-core')
-    compile project(':osm4j-xml')
-    compile project(':osm4j-pbf')
-    compile project(':osm4j-tbo')
-    compile project(':osm4j-geometry')
+    api project(':osm4j-core')
+    api project(':osm4j-xml')
+    api project(':osm4j-pbf')
+    api project(':osm4j-tbo')
+    api project(':osm4j-geometry')
 
-    compile 'de.topobyte:large-scale-file-io:0.1.0'
-    compile 'de.topobyte:adt-geo:0.1.0'
-    compile 'de.topobyte:commons-cli-helper:0.1.0'
-    compile 'de.topobyte:melon-io:0.1.0'
+    api 'de.topobyte:large-scale-file-io:0.1.0'
+    api 'de.topobyte:adt-geo:0.1.0'
+    api 'de.topobyte:commons-cli-helper:0.1.0'
+    api 'de.topobyte:melon-io:0.1.0'
 
-    compile 'com.slimjars.trove4j:trove4j-int-hash-set:1.0.1'
+    api 'com.slimjars.trove4j:trove4j-int-hash-set:1.0.1'
 
-    compile 'org.apache.commons:commons-compress:1.8'
-    compile 'com.google.guava:guava:19.0'
+    api 'org.apache.commons:commons-compress:1.8'
+    api 'com.google.guava:guava:19.0'
 
-    compile 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.6.1'
 
-    testCompile project(':osm4j-testing')
+    testImplementation project(':osm4j-testing')
 
-    testCompile 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.13.2'
 
-    testRuntime 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntime 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
+    testRuntimeOnly 'log4j:log4j:1.2.16'
 }
 
 eclipse {
