--- a/core/testing/build.gradle
+++ b/core/testing/build.gradle
@@ -6,8 +6,7 @@ dependencies {
     implementation 'junit:junit:4.13.2'
     implementation 'com.google.guava:guava:19.0'
 
-    runtimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    runtimeOnly 'log4j:log4j:1.2.16'
+    runtimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
 
 task copyJars(type: Copy) {
