--- a/edit/core/build.gradle
+++ b/edit/core/build.gradle
@@ -3,10 +3,9 @@ dependencies {
 
     api 'de.topobyte:xml4jah-dom:0.0.6'
     api 'org.apache.httpcomponents:httpclient:4.5.5'
-    api 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.7.36'
 
-    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntimeOnly 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
 
 eclipse.project.name = 'osm4j-edit'
