--- a/extra/cli/build.gradle
+++ b/extra/cli/build.gradle
@@ -65,8 +65,7 @@ distributions {
 dependencies {
     implementation project(':osm4j-extra')
 
-    runtimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    runtimeOnly 'log4j:log4j:1.2.16'
+    runtimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
 
 task copyJars(type: Copy) {
