--- a/pbf/core/build.gradle
+++ b/pbf/core/build.gradle
@@ -20,13 +20,12 @@ dependencies {
 
     api 'net.jpountz.lz4:lz4:1.3.0'
 
-    api 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.7.36'
 
     testImplementation project(':osm4j-xml')
     testImplementation project(':osm4j-testing')
 
     testImplementation 'junit:junit:4.13.2'
 
-    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntimeOnly 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
