--- a/replication/core/build.gradle
+++ b/replication/core/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     api 'commons-io:commons-io:2.4'
     api 'joda-time:joda-time:2.9.7'
     api 'org.apache.httpcomponents:httpclient:4.5.5'
-    api 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.7.36'
 
     testImplementation project(':osm4j-testing')
 
@@ -20,8 +20,7 @@ dependencies {
     testImplementation 'de.topobyte:adt-geo:0.1.0'
     testImplementation 'junit:junit:4.13.2'
 
-    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntimeOnly 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
 
 eclipse.project.name = 'osm4j-replication'
