--- a/replication/testing/build.gradle
+++ b/replication/testing/build.gradle
@@ -3,8 +3,7 @@ dependencies {
 
     implementation 'org.apache.commons:commons-compress:1.8'
 
-    runtimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    runtimeOnly 'log4j:log4j:1.2.16'
+    runtimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
 
 task copyJars(type: Copy) {
