--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -6,12 +6,11 @@ if (project.hasProperty("topobyte")) {
 dependencies {
     api project(':osm4j-core')
 
-    api 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.7.36'
 
     testImplementation project(':osm4j-xml')
 
     testImplementation 'junit:junit:4.13.2'
 
-    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntimeOnly 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
