--- a/utils/cli/build.gradle
+++ b/utils/cli/build.gradle
@@ -56,8 +56,7 @@ dependencies {
 
     implementation 'de.topobyte:simple-mapfile-xml:0.1.0'
 
-    runtimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    runtimeOnly 'log4j:log4j:1.2.16'
+    runtimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
 
 task copyJars(type: Copy) {
