--- a/xml/core/build.gradle
+++ b/xml/core/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 
     api 'org.apache.commons:commons-text:1.1'
     api 'joda-time:joda-time:2.9.7'
-    api 'org.slf4j:slf4j-api:1.6.1'
+    api 'org.slf4j:slf4j-api:1.7.36'
 
     testImplementation project(':osm4j-testing')
 
@@ -18,8 +18,7 @@ dependencies {
     testImplementation 'commons-io:commons-io:2.4'
     testImplementation 'junit:junit:4.13.2'
 
-    testRuntimeOnly 'org.slf4j:slf4j-log4j12:1.6.1'
-    testRuntimeOnly 'log4j:log4j:1.2.16'
+    testRuntimeOnly 'org.slf4j:slf4j-reload4j:1.7.36'
 }
 
 eclipse.project.name = 'osm4j-xml'
