Enable logging for NodeProgress

--- a/extra/cli/src/main/resources/log4j.properties
+++ b/extra/cli/src/main/resources/log4j.properties
@@ -2,6 +2,7 @@ log4j.rootLogger=WARN, A1
 
 log4j.logger.de.topobyte.osm4j.geometry=INFO
 log4j.logger.de.topobyte.osm4j.extra=DEBUG
+log4j.logger.de.topobyte.osm4j.incubating.NodeProgress=INFO
 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
