--- a/pbf/full/build.gradle
+++ b/pbf/full/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
     api 'com.google.protobuf:protobuf-java:3.23.4'
 
-    api 'net.jpountz.lz4:lz4:1.3.0'
+    api 'org.lz4:lz4-java:1.8.0'
 
     api 'org.slf4j:slf4j-api:1.7.36'
 
