--- a/tbo/core/build.gradle
+++ b/tbo/core/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     api 'com.slimjars.trove4j:trove4j-hash-map:1.0.1'
     api 'com.slimjars.trove4j:trove4j-int-object-hash-map:1.0.1'
 
-    api 'net.jpountz.lz4:lz4:1.3.0'
+    api 'org.lz4:lz4-java:1.8.0'
     api 'org.apache.commons:commons-lang3:3.13.0'
     api 'org.slf4j:slf4j-api:1.7.36'
 
