--- a/tbo/testing/build.gradle
+++ b/tbo/testing/build.gradle
@@ -13,5 +13,5 @@ task copyDeps(type: Copy) {
 }
 
 task createRuntime(dependsOn: [copyJars, copyDeps]) {
-    description 'Setup the execution environment for the scripts'
+    description = 'Setup the execution environment for the scripts'
 }
