--- a/xml/testing/build.gradle
+++ b/xml/testing/build.gradle
@@ -17,5 +17,5 @@ task copyDeps(type: Copy) {
 }
 
 task createRuntime(dependsOn: [copyJars, copyDeps]) {
-    description 'Setup the execution environment for the scripts'
+    description = 'Setup the execution environment for the scripts'
 }
