--- a/pbf/full/build.gradle
+++ b/pbf/full/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation project(':osm4j-xml')
     testImplementation project(':osm4j-testing')
 
+    testImplementation 'de.topobyte:system-utils:0.0.1'
     testImplementation 'junit:junit:4.13.2'
 
     testRuntimeOnly 'org.slf4j:slf4j-reload4j:2.0.16'
