--- a/xml/core/build.gradle
+++ b/xml/core/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 
     testImplementation 'org.apache.commons:commons-compress:1.27.1'
     testImplementation 'commons-io:commons-io:2.18.0'
+    testImplementation 'de.topobyte:system-utils:0.0.1'
     testImplementation 'junit:junit:4.13.2'
 
     testRuntimeOnly 'org.slf4j:slf4j-reload4j:2.0.16'
